objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Category__c</fullName>
        <description>PKI - some sort of segmentation field but not sure it is used</description>
        <label>Account Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                    <default>true</default>
                    <label>Commercial</label>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
                <value>
                    <fullName>States</fullName>
                </value>
                <value>
                    <fullName>Education - Private</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Publisher</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_Screen_Notes__c</fullName>
        <description>used for NTD / SDx</description>
        <label>Add Screen Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Borderline_Risks__c</fullName>
        <description>used for NTD / SDx</description>
        <label>Borderline Risks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRL_Low_Limit_37__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRL Low Limit 37</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clinician_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clinician Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Rep__c</fullName>
        <label>Inside Sales Rep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cathy Chitwood</fullName>
                </value>
                <value>
                    <fullName>Dana Duta</fullName>
                </value>
                <value>
                    <fullName>Elaine Amico</fullName>
                </value>
                <value>
                    <fullName>Jason Robinson</fullName>
                </value>
                <value>
                    <fullName>Melana Spalding</fullName>
                </value>
                <value>
                    <fullName>Phil Rogers</fullName>
                </value>
                <value>
                    <fullName>Susan Hegseth</fullName>
                </value>
                <value>
                    <fullName>James Thouin</fullName>
                </value>
                <value>
                    <fullName>Richard Ouellette</fullName>
                </value>
                <value>
                    <fullName>Stella Ponzo</fullName>
                </value>
                <value>
                    <fullName>David Stanton</fullName>
                </value>
                <value>
                    <fullName>Meara Jones</fullName>
                </value>
                <value>
                    <fullName>Rosemarie Connolly</fullName>
                </value>
                <value>
                    <fullName>Magdalena Jaworska</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDM_Account_Name__c</fullName>
        <formula>&apos;INFA-MDM&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MDM Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIPT_Client_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NIPT Client Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NIPT_Mail_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NIPT Mail Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Info__c</fullName>
        <description>Displays concatenated opportunity details on account</description>
        <formula>&apos;Open:&apos; + Text(No_Of_Open_Opportunities_INF__c) + &apos;/Closed:&apos; +  Text(No_Of_Closed_Won_Opportunities_INF__c)</formula>
        <label>Opportunity Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIRADIDENTIFIER__c</fullName>
        <label>PKIRADIDENTIFIER</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_GBL_Province__c</fullName>
        <label>Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>安徽省</fullName>
                </value>
                <value>
                    <fullName>江苏省</fullName>
                </value>
                <value>
                    <fullName>上海市</fullName>
                </value>
                <value>
                    <fullName>浙江省</fullName>
                </value>
                <value>
                    <fullName>北京市</fullName>
                </value>
                <value>
                    <fullName>黑龙江省</fullName>
                </value>
                <value>
                    <fullName>吉林省</fullName>
                </value>
                <value>
                    <fullName>辽宁省</fullName>
                </value>
                <value>
                    <fullName>河北省</fullName>
                </value>
                <value>
                    <fullName>天津市</fullName>
                </value>
                <value>
                    <fullName>山西省</fullName>
                </value>
                <value>
                    <fullName>内蒙古自治区</fullName>
                </value>
                <value>
                    <fullName>山东省</fullName>
                </value>
                <value>
                    <fullName>江西省</fullName>
                </value>
                <value>
                    <fullName>河南省</fullName>
                </value>
                <value>
                    <fullName>重庆市</fullName>
                </value>
                <value>
                    <fullName>贵州省</fullName>
                </value>
                <value>
                    <fullName>四川省</fullName>
                </value>
                <value>
                    <fullName>云南省</fullName>
                </value>
                <value>
                    <fullName>湖南省</fullName>
                </value>
                <value>
                    <fullName>湖北省</fullName>
                </value>
                <value>
                    <fullName>海南省</fullName>
                </value>
                <value>
                    <fullName>广东省</fullName>
                </value>
                <value>
                    <fullName>广西壮族自治区</fullName>
                </value>
                <value>
                    <fullName>福建省</fullName>
                </value>
                <value>
                    <fullName>新疆维吾尔自治区</fullName>
                </value>
                <value>
                    <fullName>陕西省</fullName>
                </value>
                <value>
                    <fullName>青海省</fullName>
                </value>
                <value>
                    <fullName>宁夏回族自治区</fullName>
                </value>
                <value>
                    <fullName>甘肃省</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKI_SAP_Function__c</fullName>
        <description>SAP - KNA1/KTOKD. Customer Account Group</description>
        <label>PKI SAP Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Language__c</fullName>
        <label>Language ISO Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>DA</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>EL</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>ET</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>HE</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IS</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JA</fullName>
                </value>
                <value>
                    <fullName>KO</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_office__c</fullName>
        <label>Reporting software (office)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PerkinElmer</fullName>
                </value>
                <value>
                    <fullName>StarLIMS</fullName>
                </value>
                <value>
                    <fullName>Homebrew</fullName>
                </value>
                <value>
                    <fullName>Omnilabs</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Offered__c</fullName>
        <label>Services Offered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sanger Sequencing</fullName>
                </value>
                <value>
                    <fullName>Genotyping</fullName>
                </value>
                <value>
                    <fullName>Next Gen Sequencing</fullName>
                </value>
                <value>
                    <fullName>Microarray</fullName>
                </value>
                <value>
                    <fullName>Proteomics</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Territory Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Class_INF__c</fullName>
        <description>INF -</description>
        <label>Account Class</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dx_Dx_APAC_Region__c</fullName>
        <description>Territory Code</description>
        <label>Dx APAC Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia/New Zealand</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Greater China – China</fullName>
                </value>
                <value>
                    <fullName>Greater China – Taiwan</fullName>
                </value>
                <value>
                    <fullName>Greater China – Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Laos</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dx_Dx_EMEA_Region__c</fullName>
        <label>Dx EMEA Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Nordics</fullName>
                </value>
                <value>
                    <fullName>DACH</fullName>
                </value>
                <value>
                    <fullName>BENELUX</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>UK/Ireland</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
                <value>
                    <fullName>Dx EMEA Other</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>MidAtlantic/SE</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>North Africa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Ultra_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gold Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PKI_Global_Region__c</fullName>
        <description>Based on the Shipping Country this field returns the value of Americas, EMEA, or APAC</description>
        <formula>IF(ISBLANK(ShippingCountry), &quot;None&quot;,
IF(CONTAINS(&quot;US:CA:PR:VI:PM:AR:BZ:BO:BR:CL:CO:CR:EC:SV:FK:GT:GY:HN:MX:NI:PA:PY:PE:SR:UY:VE:AI:AG:AW:BS:BB:BM:KY:CU:DM:DO:GL:GD:GP:HT:JM:MQ:MS:KN:LC:VC:TC:TT:AN:VG:&quot;, ShippingCountry), &quot;Americas&quot;,
IF(CONTAINS(&quot;AT:BE:CH:DE:DK:ES:FI:FR:GB:IE:IT:LU:NL:NO:PL:SE:AF:BH:BD:BT:IO:KM:IN:IR:KW:MV:NP:OM:PK:QA:SA:LK:AE:YE:DZ:AD:AO:BJ:BW:BF:BI:BV:CM:CV:CF:TD:CG:DJ:EG:GQ:ER:ET:FX:GF:GA:GM:GH:GI:GN:GW:IQ:CI:JO:KE:KZ:LB:LK:LS:LR:LY:NU:MG:MW:ML:MR:MU:YT:MC:MA:MV:MZ:NA:NE:NG:PT:RW:SC:SM:ST:SN:SC:SL:SO:ZA:ES:SH:SD:SZ:TZ:TG:TN:UG:EH:ZM:ZW:CD:VA:AL:AM:AZ:BY:BA:BV:BG:HR:CY:CZ:EE:FO:MK:GE:GR:GL:HU:IS:IL:KZ:KG:LV:LI:LT:MT:MD:ME:RS:RO:RU:SK:SI:SY:TJ:TR:TM:UA:UZ:PS:SS&quot;, ShippingCountry), &quot;EMEA&quot;,
IF(CONTAINS(&quot;JP:AS:AQ:AU:BN:KH:CN:CX:CC:CK:TP:FJ:PF:TF:GU:HM:HK:ID:KI:LA:MO:MY:MH:FM:MN:MM:NR:NC:NZ:NU:NF:KP:MP:PW:PG:PH:PN:WS:SG:SB:KR:TW:TH:TK:TO:TM:TV:UM:VU:VN:WF&quot;, ShippingCountry), &quot;APAC&quot;, &quot;Other&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Americas, EMEA or APAC</inlineHelpText>
        <label>Global Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_SFDC_Name__c</fullName>
        <description>The value in this field is synced from SAP using WebMethods</description>
        <label>PKI SAP SFDC Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perten_Account_No__c</fullName>
        <label>Perten Account No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Contact__c</fullName>
        <label>Reference Contact</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Industry_Code__c</fullName>
        <label>SAP Industry Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SAP_Industry_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Street_Name__c</fullName>
        <description>Allows for the deduplication of Accounts</description>
        <inlineHelpText>The sales team can enter corrections to the address supplied by the ERP systems</inlineHelpText>
        <label>Sales Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Type_Fluid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sample Type Fluid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Type_Serum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sample Type Serum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Volume_1st__c</fullName>
        <label>Sample Volume 1st Trimester</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Volume_2nd__c</fullName>
        <label>Sample Volume 2nd Trimester</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory_Viacord__c</fullName>
        <label>Territory</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Top_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If TRUE, then it will update the top parent irrespective of change in Parent Account field (esp. for updating existing records), in bulk.</description>
        <inlineHelpText>This checkbox has to be checked to trigger the logic to update the Top Parent.</inlineHelpText>
        <label>Update Top Parent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Expirtion__c</fullName>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Impl_Code__c</fullName>
        <label>Customer Impl Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1 (Regulated Solution)</fullName>
                </value>
                <value>
                    <fullName>Code 2 (Entrp Solution w/Sol. Servs)</fullName>
                </value>
                <value>
                    <fullName>Code 3 (Solution w/o Solution Serv)</fullName>
                </value>
                <value>
                    <fullName>Code 4 (Hosted Solution)</fullName>
                </value>
                <value>
                    <fullName>Code 5a (FinchLab Hosted)</fullName>
                </value>
                <value>
                    <fullName>Code 5b (FinchLab On-Site)</fullName>
                </value>
                <value>
                    <fullName>Code 5c (FinchLab Next Gen On-Site)</fullName>
                </value>
                <value>
                    <fullName>Code 5d (FinchLab Next Gen Hosted)</fullName>
                </value>
                <value>
                    <fullName>Code 6a (iFinch Hosted)</fullName>
                </value>
                <value>
                    <fullName>Code 6b (iFinch On-Site)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(ISBLANK( ShippingCity),0,1) + IF(ISBLANK(  ShippingCountry ),0,1)+IF(ISBLANK(  ShippingState ),0,1)+IF(ISBLANK(  ShippingStreet ),0,1)+IF(ISBLANK(  ShippingPostalCode ),0,1) + 

IF( ISPICKVAL(Industry,&quot;&quot;), 0,1) +  IF(LEN(Phone) = 0, 0,1) + IF( ISPICKVAL( Laboratory_Type__c ,&quot;&quot;), 0,1) +IF( ISBLANK(  Name2__c ), 0,1) + IF(ISBLANK(  Website ),0,1)</formula>
        <inlineHelpText>The Profile completeness score depends on providing accurate information in the following fields
Shipping Street
Shipping City
Shipping State
Shipping Zip/PostalL
Shipping Country
Phone
Industry
Laboratory Type
Department
Website</inlineHelpText>
        <label>Profile Completeness Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry_2nd_Level__c</fullName>
        <description>Hidden 4/12/2016</description>
        <label>Industry 2nd Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic/Research GENERAL</fullName>
                </value>
                <value>
                    <fullName>Agrichemical</fullName>
                </value>
                <value>
                    <fullName>Beverage</fullName>
                </value>
                <value>
                    <fullName>Biochemistry</fullName>
                </value>
                <value>
                    <fullName>BioDiesel</fullName>
                </value>
                <value>
                    <fullName>Biotech</fullName>
                </value>
                <value>
                    <fullName>Biothreat/Homeland Security</fullName>
                </value>
                <value>
                    <fullName>Chemical GENERAL</fullName>
                </value>
                <value>
                    <fullName>Chemical testing labs</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Clinical screening</fullName>
                </value>
                <value>
                    <fullName>Cosmetics</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Devices</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Electronic GENERAL</fullName>
                </value>
                <value>
                    <fullName>Energy GENERAL</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Environmental GENERAL</fullName>
                </value>
                <value>
                    <fullName>Exploration</fullName>
                </value>
                <value>
                    <fullName>Fine chemical</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Fragrance GENERAL</fullName>
                </value>
                <value>
                    <fullName>Forensic sciences</fullName>
                </value>
                <value>
                    <fullName>Genetic screening</fullName>
                </value>
                <value>
                    <fullName>Health Services GENERAL</fullName>
                </value>
                <value>
                    <fullName>Lubricating/Used Oils</fullName>
                </value>
                <value>
                    <fullName>Manfacturing Q&amp;A</fullName>
                </value>
                <value>
                    <fullName>Medical/Patient Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Low_PAPP_A_Comment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Low PAPP-A Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Penetration__c</fullName>
        <description>LST target market analytics - GM</description>
        <label>Market Penetration</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NGS Top 200</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Contacts_INF__c</fullName>
        <description>Count of Contacts</description>
        <label>Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Access_Info__c</fullName>
        <label>Office Access Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Open_Opportunities__c</fullName>
        <label>Open Opportunities $</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reagent_supplier_3__c</fullName>
        <label>Reagent supplier 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PerkinElmer</fullName>
                </value>
                <value>
                    <fullName>Bio-Rad</fullName>
                </value>
                <value>
                    <fullName>Chromsystems</fullName>
                </value>
                <value>
                    <fullName>Homebrew</fullName>
                </value>
                <value>
                    <fullName>ANI Labsystems</fullName>
                </value>
                <value>
                    <fullName>Sebia</fullName>
                </value>
                <value>
                    <fullName>Luminex</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCountryEQBCountry__c</fullName>
        <formula>ShippingCountry = BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SCountryEQBCountry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Account_ID_18__c</fullName>
        <description>ANNUITAS PDG</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Account ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Country_Name__c</fullName>
        <description>Allows for the deduplication of Accounts</description>
        <inlineHelpText>The sales team can enter corrections to the address supplied by the ERP systems</inlineHelpText>
        <label>Sales Country Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Saint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_IRA_Specimens__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(Account must have a least 1 Web Access user)</description>
        <inlineHelpText>(Account must have a least 1 Web Access user)</inlineHelpText>
        <label>Send IRA Specimens</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Expiration__c</fullName>
        <label>Support Expiration</label>
        <type>Date</type>
    </fields>
</CustomObject>